vibe: "new game" button in game over screen
old "submit score" button takes player to high scores screen

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -505,6 +505,15 @@
 						action: () => {
 							const name = playerName.trim() || 'Anonymous';
 							saveHighScore(name, score);
+							showHighScoresMenu();
+						}
+					},
+					{
+						type: 'button',
+						label: 'New Game',
+						action: () => {
+							const name = playerName.trim() || 'Anonymous';
+							saveHighScore(name, score);
 							startGame();
 						}
 					},
