vibe: extract high score menu

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -36,6 +36,7 @@
 	<script type="text/javascript" src="SimpleMusic.js"></script>
 	<script type="text/javascript" src="MusicPlayer.js"></script>
 	<script type="text/javascript" src="MenuSystem.js"></script>
+	<script type="text/javascript" src="HighScoreManager.js"></script>
 	<script type="text/javascript" src="Minimap.js"></script>
 </head>
 <body>
@@ -66,6 +67,9 @@
 			document.getElementById('menuButtons'),
 			document.getElementById('menuInstructions')
 		);
+
+		// Initialize high score manager
+		const highScoreManager = new HighScoreManager(menuSystem);
 
 		// Preferences Management
 		function getPreferences() {
@@ -359,7 +363,7 @@
 					{
 						type: 'button',
 						label: 'High Scores',
-						action: () => showHighScoresMenu()
+						action: () => highScoreManager.showHighScoresMenu(() => showMainMenu())
 					},
 					{
 						type: 'button',
@@ -376,148 +380,6 @@
 			});
 		}
 
-		// High Score Management
-		/**
-		 * Sanitizes user input to prevent XSS attacks
-		 * Removes HTML tags and dangerous characters while supporting international names
-		 * Allows Unicode letters (all languages), numbers, spaces, and safe punctuation
-		 * @param {string} input - Raw user input
-		 * @returns {string} Sanitized string safe for display
-		 */
-		function sanitizeInput(input) {
-			if (!input) return '';
-
-			// Convert to string and trim
-			let sanitized = String(input).trim();
-
-			// Remove any HTML tags
-			sanitized = sanitized.replace(/<[^>]*>/g, '');
-
-			// As this is all local, I don't care about "dangerous Unicode ranges" where "danger" is limited to spoofing
-
-			// Remove remaining angle brackets to prevent any HTML/script injection
-			sanitized = sanitized.replace(/[<>]/g, '');
-
-			// Allow: Unicode letters (\p{L}), numbers (\p{N}), combining marks (\p{M} for accents),
-			// spaces, and safe punctuation (.-_')
-			// This supports names in Chinese (中文), Japanese (日本語), Arabic (العربية),
-			// Hindi (हिन्दी), Cyrillic (Русский), Greek (Ελληνικά), etc.
-			sanitized = sanitized.replace(/[^\p{L}\p{N}\p{M}\s.\-_']/gu, '');
-
-			// Limit consecutive spaces to single space
-			sanitized = sanitized.replace(/\s+/g, ' ');
-
-			// Trim again after replacements
-			sanitized = sanitized.trim();
-
-			return sanitized;
-		}
-
-		function getHighScores() {
-			const stored = localStorage.getItem('highScores');
-			if (!stored) return [];
-
-			const scores = JSON.parse(stored);
-			// Sanitize all names when loading (defense against legacy data)
-			return scores.map(score => ({
-				...score,
-				name: sanitizeInput(score.name)
-			}));
-		}
-
-		function saveHighScore(name, score) {
-			const highScores = getHighScores();
-
-			// Sanitize the name to prevent XSS
-			const sanitizedName = sanitizeInput(name);
-
-			const newScore = {
-				name: sanitizedName,
-				score: score,
-				date: new Date().toISOString()
-			};
-			highScores.push(newScore);
-
-			// Sort by score descending
-			highScores.sort((a, b) => b.score - a.score);
-
-			// Keep only top 100 to prevent unlimited growth
-			const top100 = highScores.slice(0, 100);
-			localStorage.setItem('highScores', JSON.stringify(top100));
-		}
-
-		function showHighScoresMenu() {
-			// Remove pause class (show background image)
-			document.getElementById('menuOverlay').classList.remove('pause');
-
-			const allScores = getHighScores();
-
-			// Find the most recent score by date
-			let mostRecentScore = null;
-			let mostRecentDate = null;
-
-			allScores.forEach(score => {
-				const scoreDate = new Date(score.date);
-				if (!mostRecentDate || scoreDate > mostRecentDate) {
-					mostRecentDate = scoreDate;
-					mostRecentScore = score;
-				}
-			});
-
-			// Find the rank of the most recent score
-			const recentIndex = mostRecentScore ? allScores.indexOf(mostRecentScore) : -1;
-			const recentRank = recentIndex >= 0 ? recentIndex + 1 : -1;
-
-			let displayScores = [];
-
-			if (recentRank === -1 || recentRank <= 10) {
-				// Recent score is in top 10 or doesn't exist, show top 10 normally
-				displayScores = allScores.slice(0, 10).map((score, index) => ({
-					...score,
-					rank: index + 1,
-					isEllipsis: false,
-					isRecent: score === mostRecentScore
-				}));
-			} else {
-				// Recent score is outside top 10
-				// Show positions 1-8
-				displayScores = allScores.slice(0, 8).map((score, index) => ({
-					...score,
-					rank: index + 1,
-					isEllipsis: false,
-					isRecent: score === mostRecentScore
-				}));
-
-				// Add ellipsis at position 9
-				displayScores.push({
-					isEllipsis: true,
-					rank: 9
-				});
-
-				// Add recent score at position 10 with its actual rank
-				displayScores.push({
-					...allScores[recentIndex],
-					rank: recentRank,
-					isEllipsis: false,
-					isRecent: true
-				});
-			}
-
-			menuSystem.showMenu({
-				title: 'HIGH SCORES',
-				items: [
-					{
-						type: 'scoreList',
-						scores: displayScores
-					},
-					{
-						type: 'button',
-						label: 'Back',
-						action: () => showMainMenu()
-					}
-				]
-			});
-		}
 
 		function showGameOverMenu() {
 			// Remove pause class (show background image)
@@ -550,8 +412,8 @@
 						label: 'Submit Score',
 						action: () => {
 							const name = playerName.trim() || 'Anonymous';
-							saveHighScore(name, score);
-							showHighScoresMenu();
+							highScoreManager.saveHighScore(name, score);
+							highScoreManager.showHighScoresMenu(() => showGameOverMenu());
 						}
 					},
 					{
@@ -559,7 +421,7 @@
 						label: 'New Game',
 						action: () => {
 							const name = playerName.trim() || 'Anonymous';
-							saveHighScore(name, score);
+							highScoreManager.saveHighScore(name, score);
 							startGame();
 						}
 					},
@@ -568,7 +430,7 @@
 						label: 'Main Menu',
 						action: () => {
 							const name = playerName.trim() || 'Anonymous';
-							saveHighScore(name, score);
+							highScoreManager.saveHighScore(name, score);
 							returnToMenu();
 						}
 					}
