--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="Particle.js"></script>
 	<script type="text/javascript" src="ParticleSystem.js"></script>
 	<script type="text/javascript" src="NPCAIUtils.js"></script>
+	<script type="text/javascript" src="SpawnSystem.js"></script>
     <script type="text/javascript" src="GameEntity.js"></script>
 	<script type="text/javascript" src="Sprite.js"></script>
 	<script type="text/javascript" src="NPC.js"></script>
@@ -196,120 +197,12 @@
 			lastShotTime = 0; // Reset to gameTime zero
 			gameTime = 0; // Reset game time
 			currentLevel = 1;
-			spawnWave(currentLevel); // Spawn first wave
+			SpawnSystem.spawnWave(currentLevel, player.sprite.position, canvas.width, canvas.height, npcs);
 		}
 
 		// Wave spawning system
 		function countNPCs() {
 			return npcs.length;
-		}
-
-		function getWaveDefinition(level) {
-			const waveIndex = Math.min(level - 1, GameConfig.SPAWNING.MAX_LEVEL_INDEX);
-			const baseWave = GameConfig.SPAWNING.WAVES[waveIndex];
-
-			// If level exceeds wave definitions, scale up the last wave
-			if (level > GameConfig.SPAWNING.WAVES.length) {
-				const levelsOver = level - GameConfig.SPAWNING.WAVES.length;
-				const scaleFactor = Math.pow(GameConfig.SPAWNING.SCALING_FACTOR, levelsOver);
-				return {
-					alienScouts: Math.floor(baseWave.alienScouts * scaleFactor),
-					alienFighters: Math.floor(baseWave.alienFighters * scaleFactor),
-					missileCruisers: Math.floor(baseWave.missileCruisers * scaleFactor),
-					asteroids: Math.floor(baseWave.asteroids * scaleFactor)
-				};
-			}
-
-			return baseWave;
-		}
-
-		function getOffscreenSpawnPosition(playerPos, canvasWidth, canvasHeight, npcWidth, npcHeight) {
-			// Spawn uniformly in rectangular region: outside screen, inside warp boundary
-			const screenHalfWidth = canvasWidth / 2;
-			const screenHalfHeight = canvasHeight / 2;
-			const npcHalfWidth = npcWidth / 2;
-			const npcHalfHeight = npcHeight / 2;
-
-			// Inner bounds (screen + NPC size)
-			const innerX = screenHalfWidth + npcHalfWidth;
-			const innerY = screenHalfHeight + npcHalfHeight;
-
-			// Outer bounds (warp boundary)
-			const outerBound = GameConfig.WORLD.NPC_WRAP_DISTANCE;
-
-			// Define 4 rectangular strips: top, bottom, left, right
-			const topArea = (2 * outerBound) * (outerBound - innerY);
-			const bottomArea = topArea;
-			const leftArea = (outerBound - innerX) * (2 * innerY);
-			const rightArea = leftArea;
-			const totalArea = topArea + bottomArea + leftArea + rightArea;
-
-			// Pick strip based on area
-			const r = Math.random() * totalArea;
-			let x, y;
-
-			if (r < topArea) {
-				// Top strip
-				x = -outerBound + Math.random() * (2 * outerBound);
-				y = innerY + Math.random() * (outerBound - innerY);
-			} else if (r < topArea + bottomArea) {
-				// Bottom strip
-				x = -outerBound + Math.random() * (2 * outerBound);
-				y = -outerBound + Math.random() * (outerBound - innerY);
-			} else if (r < topArea + bottomArea + leftArea) {
-				// Left strip
-				x = -outerBound + Math.random() * (outerBound - innerX);
-				y = -innerY + Math.random() * (2 * innerY);
-			} else {
-				// Right strip
-				x = innerX + Math.random() * (outerBound - innerX);
-				y = -innerY + Math.random() * (2 * innerY);
-			}
-
-			return new Vector2D(playerPos.x + x, playerPos.y + y);
-		}
-
-		function spawnWave(level) {
-			const wave = getWaveDefinition(level);
-			const playerPos = player.sprite.position;
-
-			console.log(`Spawning Wave ${level}:`, wave);
-
-			// Spawn alien scouts
-			for (let i = 0; i < wave.alienScouts; i++) {
-				const position = getOffscreenSpawnPosition(playerPos, canvas.width, canvas.height,
-					GameConfig.ALIEN_SCOUT.WIDTH, GameConfig.ALIEN_SCOUT.HEIGHT);
-				const scout = new AlienScout(playerPos, canvas.width, canvas.height);
-				scout.sprite.position = position;
-				npcs.push(scout);
-			}
-
-			// Spawn alien fighters
-			for (let i = 0; i < wave.alienFighters; i++) {
-				const position = getOffscreenSpawnPosition(playerPos, canvas.width, canvas.height,
-					GameConfig.ALIEN_FIGHTER.WIDTH, GameConfig.ALIEN_FIGHTER.HEIGHT);
-				const fighter = new AlienFighter(playerPos, canvas.width, canvas.height);
-				fighter.sprite.position = position;
-				npcs.push(fighter);
-			}
-
-			// Spawn missile cruisers
-			for (let i = 0; i < wave.missileCruisers; i++) {
-				const position = getOffscreenSpawnPosition(playerPos, canvas.width, canvas.height,
-					GameConfig.MISSILE_CRUISER.WIDTH, GameConfig.MISSILE_CRUISER.HEIGHT);
-				const cruiser = new MissileCruiser(playerPos, canvas.width, canvas.height);
-				cruiser.sprite.position = position;
-				npcs.push(cruiser);
-			}
-
-			// Spawn asteroids
-			for (let i = 0; i < wave.asteroids; i++) {
-				const position = getOffscreenSpawnPosition(playerPos, canvas.width, canvas.height,
-					GameConfig.ASTEROID_BIG.WIDTH, GameConfig.ASTEROID_BIG.HEIGHT);
-				const asteroid = new Asteroid(playerPos, canvas.width, canvas.height);
-				asteroid.sprite.position = position;
-				npcs.push(asteroid);
-			}
 		}
 
 		function gameOver() {
@@ -846,7 +739,7 @@
 			if (countNPCs() === 0 && !wormhole) {
 				console.log(`Wave ${currentLevel} cleared! Wormhole spawning...`);
 				const wormholeSize = 27 * 3; // Wormhole is 27x28 * 3
-				const position = getOffscreenSpawnPosition(
+				const position = SpawnSystem.getOffscreenSpawnPosition(
 					player.sprite.position,
 					canvas.width,
 					canvas.height,
@@ -977,7 +870,7 @@
 				currentLevel++;
 				console.log(`Entered wormhole! Advancing to wave ${currentLevel}`);
 				wormhole = null; // Remove wormhole
-				spawnWave(currentLevel);
+				SpawnSystem.spawnWave(currentLevel, player.sprite.position, canvas.width, canvas.height, npcs);
 				playSoundEffect('achievement', 0.5); // Play a sound effect
 			}
 
